// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarContent when 7 days tab is selected renders a component with top pages for 7 days, and top downloads for 7 days 1`] = `
<DocumentFragment>
  <section
    class="sidebar-content"
  >
    <div
      class="sidebar-content__headline"
    >
      <h2>
        <a
          href="/definitions#report_realtime_top_pages"
        >
          Top 30 Web Pages and App Screens
        </a>
      </h2>
    </div>
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="usa-button-group usa-button-group--segmented"
        role="tablist"
      >
        <li
          aria-controls="panel:r1:0"
          aria-disabled="false"
          aria-selected="false"
          class="usa-button-group__item"
          data-rttab="true"
          id="tab:r1:0"
          role="tab"
        >
          <button
            class="usa-button"
            type="button"
          >
            30 mins
          </button>
        </li>
        <li
          aria-controls="panel:r1:1"
          aria-disabled="false"
          aria-selected="true"
          class="usa-button-group__item react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r1:1"
          role="tab"
          tabindex="0"
        >
          <button
            class="usa-button"
            type="button"
          >
            7 days
          </button>
        </li>
        <li
          aria-controls="panel:r1:2"
          aria-disabled="false"
          aria-selected="false"
          class="usa-button-group__item"
          data-rttab="true"
          id="tab:r1:2"
          role="tab"
        >
          <button
            class="usa-button"
            type="button"
          >
            30 days
          </button>
        </li>
      </ul>
      <div
        aria-labelledby="tab:r1:0"
        class="react-tabs__tab-panel"
        id="panel:r1:0"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r1:1"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r1:1"
        role="tabpanel"
      >
        <section
          class="top-pages"
        >
          <p>
            Sessions over the last week on 
            <strong>
              hostnames
            </strong>
            , including traffic to all web pages and app screens within that hostname.
          </p>
          <figure
            class="top-pages__bar-chart"
            data-source="http://www.example.com/data//top-domains-7-days.json"
          >
            <div
              class="data bar-chart"
            />
          </figure>
        </section>
        <section
          class="top-downloads"
        >
          <div
            class="top-downloads__headline"
          >
            <h3>
              <a
                href="/definitions#report_yesterday_top_downloads"
              >
                Top 20 Downloads Last 7 Days
              </a>
            </h3>
          </div>
          <h4>
            <em>
              Top file downloads over the last week on Department of Interior hostnames.
            </em>
          </h4>
          <figure
            class="top-downloads__bar-chart"
          >
            <div
              class="data bar-chart"
            />
          </figure>
        </section>
        <section
          class="top-video-plays"
        >
          <div
            class="top-video-plays__headline"
          >
            <h3>
              Top Video Plays Last 7 Days
            </h3>
          </div>
          <h4>
            <em>
              Video play data is unavailable for Department of Interior hostnames.
            </em>
          </h4>
          <div />
        </section>
      </div>
      <div
        aria-labelledby="tab:r1:2"
        class="react-tabs__tab-panel"
        id="panel:r1:2"
        role="tabpanel"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`SidebarContent when 30 days tab is selected renders a component with top pages for 30 days, and top downloads for 30 days 1`] = `
<DocumentFragment>
  <section
    class="sidebar-content"
  >
    <div
      class="sidebar-content__headline"
    >
      <h2>
        <a
          href="/definitions#report_realtime_top_pages"
        >
          Top 30 Web Pages and App Screens
        </a>
      </h2>
    </div>
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="usa-button-group usa-button-group--segmented"
        role="tablist"
      >
        <li
          aria-controls="panel:r2:0"
          aria-disabled="false"
          aria-selected="false"
          class="usa-button-group__item"
          data-rttab="true"
          id="tab:r2:0"
          role="tab"
        >
          <button
            class="usa-button"
            type="button"
          >
            30 mins
          </button>
        </li>
        <li
          aria-controls="panel:r2:1"
          aria-disabled="false"
          aria-selected="false"
          class="usa-button-group__item"
          data-rttab="true"
          id="tab:r2:1"
          role="tab"
        >
          <button
            class="usa-button"
            type="button"
          >
            7 days
          </button>
        </li>
        <li
          aria-controls="panel:r2:2"
          aria-disabled="false"
          aria-selected="true"
          class="usa-button-group__item react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r2:2"
          role="tab"
          tabindex="0"
        >
          <button
            class="usa-button"
            type="button"
          >
            30 days
          </button>
        </li>
      </ul>
      <div
        aria-labelledby="tab:r2:0"
        class="react-tabs__tab-panel"
        id="panel:r2:0"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r2:1"
        class="react-tabs__tab-panel"
        id="panel:r2:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r2:2"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r2:2"
        role="tabpanel"
      >
        <section
          class="top-pages"
        >
          <p>
            Sessions over the last month on 
            <strong>
              hostnames
            </strong>
            , including traffic to all web pages and app screens within that hostname. 
            <a
              href="http://www.example.com/data//top-10000-domains-30-days.csv"
            >
              Download the full dataset
            </a>
            .
          </p>
          <figure
            class="top-pages__bar-chart"
            data-source="http://www.example.com/data//top-domains-30-days.json"
          >
            <div
              class="data bar-chart"
            />
          </figure>
        </section>
        <section
          class="top-downloads"
        >
          <div
            class="top-downloads__headline"
          >
            <h3>
              <a
                href="/definitions#report_yesterday_top_downloads"
              >
                Top 20 Downloads Last 30 Days
              </a>
            </h3>
          </div>
          <h4>
            <em>
              Top file downloads over the last month on Department of Interior hostnames.
            </em>
          </h4>
          <figure
            class="top-downloads__bar-chart"
          >
            <div
              class="data bar-chart"
            />
          </figure>
        </section>
        <section
          class="top-video-plays"
        >
          <div
            class="top-video-plays__headline"
          >
            <h3>
              Top Video Plays Last 30 Days
            </h3>
          </div>
          <h4>
            <em>
              Video play data is unavailable for Department of Interior hostnames.
            </em>
          </h4>
          <div />
        </section>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SidebarContent when 30 minutes tab is selected renders a component with top pages realtime, and top downloads yesterday 1`] = `
<DocumentFragment>
  <section
    class="sidebar-content"
  >
    <div
      class="sidebar-content__headline"
    >
      <h2>
        <a
          href="/definitions#report_realtime_top_pages"
        >
          Top 30 Web Pages and App Screens
        </a>
      </h2>
    </div>
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="usa-button-group usa-button-group--segmented"
        role="tablist"
      >
        <li
          aria-controls="panel:r0:0"
          aria-disabled="false"
          aria-selected="true"
          class="usa-button-group__item react-tabs__tab--selected"
          data-rttab="true"
          id="tab:r0:0"
          role="tab"
          tabindex="0"
        >
          <button
            class="usa-button"
            type="button"
          >
            30 mins
          </button>
        </li>
        <li
          aria-controls="panel:r0:1"
          aria-disabled="false"
          aria-selected="false"
          class="usa-button-group__item"
          data-rttab="true"
          id="tab:r0:1"
          role="tab"
        >
          <button
            class="usa-button"
            type="button"
          >
            7 days
          </button>
        </li>
        <li
          aria-controls="panel:r0:2"
          aria-disabled="false"
          aria-selected="false"
          class="usa-button-group__item"
          data-rttab="true"
          id="tab:r0:2"
          role="tab"
        >
          <button
            class="usa-button"
            type="button"
          >
            30 days
          </button>
        </li>
      </ul>
      <div
        aria-labelledby="tab:r0:0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel:r0:0"
        role="tabpanel"
      >
        <section
          class="top-pages"
        >
          <p>
            <strong>
              Users
            </strong>
             on a 
            <strong>
              single, specific page or app screen
            </strong>
             in the last 30 minutes. Hostnames are not currently reported in real-time, so only page title and screen name information is available.
          </p>
          <figure
            class="top-pages__realtime-bar-chart"
          >
            <div
              class="data bar-chart"
            />
          </figure>
        </section>
        <section
          class="top-downloads"
        >
          <div
            class="top-downloads__headline"
          >
            <h3>
              <a
                href="/definitions#report_yesterday_top_downloads"
              >
                Top 20 Downloads Yesterday
              </a>
            </h3>
          </div>
          <h4>
            <em>
              Top file downloads yesterday on Department of Interior hostnames.
            </em>
          </h4>
          <figure
            class="top-downloads__bar-chart"
          >
            <div
              class="data bar-chart"
            />
          </figure>
        </section>
        <section
          class="top-video-plays"
        >
          <div
            class="top-video-plays__headline"
          >
            <h3>
              Top Video Plays Yesterday
            </h3>
          </div>
          <h4>
            <em>
              Video play data is unavailable for Department of Interior hostnames.
            </em>
          </h4>
          <div />
        </section>
      </div>
      <div
        aria-labelledby="tab:r0:1"
        class="react-tabs__tab-panel"
        id="panel:r0:1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab:r0:2"
        class="react-tabs__tab-panel"
        id="panel:r0:2"
        role="tabpanel"
      />
    </div>
  </section>
</DocumentFragment>
`;
